# machine_learning_project_template

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  commit-msg.sh  pyproject.toml  pytest.ini  test_unit.py
.github/workflows/: pytest.yaml
src/config/: config.json
