[tool.poetry]
name = "your-ml-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
category-encoders = "^2.3.0"
coverage = "^6.2"
DateTime = "^4.3"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
matplotlib = "^3.5.1"
mlflow = "^1.22.0"
mlxtend = "^0.19.0"
plotly = "^5.5.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
statsmodels = "^0.13.1"
tqdm = "^4.62.3"
yellowbrick = "^1.3.post1"
vega-datasets = "^0.9.0"
altair = "^4.2.0"
pandas-profiling = "^3.1.0"
numpy = "1.19.5"
streamlit-pandas-profiling = "^0.1.3"
interpret-community = "^0.23.0"
lime = "^0.2.0"
lightgbm = "^3.3.1"
great-expectations = "^0.13.49"
umap-learn = "^0.5.2"
keras = "^2.7.0"
mpmath = "^1.2.1"
pandas = "1.3.1"
scipy = "1.7.1"
tensorflow = "^2.7.0"
pingouin = "0.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
