[tool.poetry]
name = "your-ml-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
# great for schema validation
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
coverage = "^6.5.0"
pytest = "^7.2.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
