[tool.poetry]
name = "your-ml-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
# great for schema validation
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
coverage = "^7.2.5"
pytest = "^7.3.1"
mypy = "^1.6.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
